# Copyright 2026 The llzk-to-shlo Authors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
# ==============================================================================

# M3 Phase 1 measurement harness (see bench/m3/run.sh).
#
# m3_runner is a fork of @open_zkx//zkx/tools/stablehlo_runner with per-stage
# timing wired in (compile / jit / kernel / d2h / total). Build & run requires
# CUDA configured the same way as gpu_semantic_tests.

load("@local_config_cuda//cuda:build_defs.bzl", "if_cuda_is_configured")
load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library", "cc_test")

package(default_visibility = ["//visibility:public"])

# nlohmann/json + open_zkx headers need `-fexceptions` and trip the same
# warning suppressions across every target in this package. The binary adds
# `-Wall` on top.
_BENCH_M3_COPTS = [
    "-fexceptions",
    "-Wno-invalid-offsetof",
    "-Wno-deprecated-declarations",
    "-Wno-nullability-completeness",
]

cc_library(
    name = "m3_common",
    hdrs = [
        "csv_schema.h",
        "timer.h",
    ],
)

# JSON fixture parsing for m3_runner. Split out of the binary so the schema
# (`{<signal>: scalar | flat-array}`, positional-by-insertion-order) can be
# unit-tested without spinning up the full GPU runner.
cc_library(
    name = "json_input",
    srcs = ["json_input.cc"],
    hdrs = ["json_input.h"],
    copts = _BENCH_M3_COPTS,
    deps = [
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings",
        "@nlohmann_json//:json",
        "@open_zkx//xla/tsl/platform:errors",
        "@open_zkx//xla/tsl/platform:statusor",
        "@open_zkx//zkx:literal",
        "@open_zkx//zkx:primitive_util",
        "@open_zkx//zkx:shape_util",
        "@open_zkx//zkx:zkx_data_cc_proto",
        "@open_zkx//zkx/hlo/ir:hlo",
    ],
)

cc_test(
    name = "json_input_test",
    size = "small",
    srcs = ["json_input_test.cc"],
    copts = _BENCH_M3_COPTS,
    deps = [
        ":json_input",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/types:span",
        "@com_google_googletest//:gtest_main",
        "@open_zkx//xla/tsl/platform:env",
        "@open_zkx//xla/tsl/platform:path",
        "@open_zkx//xla/tsl/platform:statusor",
        "@open_zkx//zkx:literal",
        "@open_zkx//zkx:shape_util",
        "@open_zkx//zkx:zkx_data_cc_proto",
        "@open_zkx//zkx/hlo/ir:hlo",
        "@open_zkx//zkx/service:hlo_module_config",
    ],
)

# GPU-witness-vs-circom .wtns byte comparison for the M3 correctness gate.
# Pure byte equality on the shared standard-form LE field encoding — no
# field-arithmetic dependency, mirroring //circom/wtns:wtns.
cc_library(
    name = "witness_compare",
    srcs = ["witness_compare.cc"],
    hdrs = ["witness_compare.h"],
    deps = [
        "//circom/wtns",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/types:span",
        "@open_zkx//zkx:literal",
        "@open_zkx//zkx:shape_util",
        "@open_zkx//zkx:zkx_data_cc_proto",
    ],
)

cc_test(
    name = "witness_compare_test",
    size = "small",
    srcs = ["witness_compare_test.cc"],
    deps = [
        ":witness_compare",
        "//circom/wtns",
        "//circom/wtns:wtns_test_utils",
        "@com_google_absl//absl/log:absl_check",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/types:span",
        "@com_google_googletest//:gtest_main",
        "@open_zkx//xla/tsl/platform:env",
        "@open_zkx//xla/tsl/platform:statusor",
        "@open_zkx//zkx:literal",
        "@open_zkx//zkx:shape_util",
        "@open_zkx//zkx:zkx_data_cc_proto",
    ],
)

# Mirrors RUNNER_RUNTIME_DEPS in
# @open_zkx//zkx/tools/stablehlo_runner:BUILD.bazel.
_RUNNER_RUNTIME_DEPS = [
    "@open_zkx//zkx/backends/gpu/runtime:command_buffer_cmd",
    "@open_zkx//zkx/backends/gpu/runtime:command_buffer_cmd_emitter",
    "@open_zkx//zkx/backends/gpu/runtime:command_buffer_thunk",
    "@open_zkx//zkx/service:gpu_plugin",
    "@open_zkx//zkx/service/gpu:gpu_compiler",
]

# Mirrors zkx_cc_binary(force_exceptions=True) without depending on the
# @open_zkx-internal config_settings (//:zkx_has_exception et al.), which are
# only declared in the open_zkx workspace root.
cc_binary(
    name = "m3_runner",
    srcs = ["m3_runner_main.cc"],
    copts = _BENCH_M3_COPTS + ["-Wall"],
    deps = [
        ":json_input",
        ":m3_common",
        ":witness_compare",
        "//circom/wtns",
        "@com_google_absl//absl/log",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/strings:str_format",
        "@open_zkx//xla/tsl/platform:env",
        "@open_zkx//xla/tsl/platform:errors",
        "@open_zkx//xla/tsl/platform:statusor",
        "@open_zkx//xla/tsl/util:command_line_flags",
        "@open_zkx//zkx:debug_options_flags",
        "@open_zkx//zkx:literal",
        "@open_zkx//zkx:literal_util",
        "@open_zkx//zkx:zkx_data_cc_proto",
        "@open_zkx//zkx/hlo/ir:hlo",
        "@open_zkx//zkx/service:hlo_runner",
        "@open_zkx//zkx/service:platform_util",
        "@open_zkx//zkx/tools/stablehlo_runner:stablehlo_utils",
    ] + _RUNNER_RUNTIME_DEPS + if_cuda_is_configured([
        "@open_zkx//zkx/stream_executor/cuda:cuda_platform",
    ]),
)
