# Copyright 2026 The llzk-to-shlo Authors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
# ==============================================================================

load("@llvm-project//mlir:tblgen.bzl", "gentbl_cc_library", "td_library")
load("@rules_cc//cc:defs.bzl", "cc_library")

package(
    default_visibility = ["//visibility:public"],
)

td_library(
    name = "td_files",
    srcs = [
        "LlzkToStablehlo.td",
        "SimplifySubComponents.td",
    ],
    includes = ["."],
    deps = [
        "@llvm-project//mlir:OpBaseTdFiles",
        "@llvm-project//mlir:PassBaseTdFiles",
    ],
)

gentbl_cc_library(
    name = "pass_inc_gen",
    tbl_outs = {
        "LlzkToStablehlo.h.inc": [
            "-gen-pass-decls",
            "-name=LlzkToStablehlo",
        ],
    },
    tblgen = "@llvm-project//mlir:mlir-tblgen",
    td_file = "LlzkToStablehlo.td",
    deps = [":td_files"],
)

gentbl_cc_library(
    name = "simplify_sub_components_inc_gen",
    tbl_outs = {
        "SimplifySubComponents.h.inc": [
            "-gen-pass-decls",
            "-name=SimplifySubComponents",
        ],
    },
    tblgen = "@llvm-project//mlir:mlir-tblgen",
    td_file = "SimplifySubComponents.td",
    deps = [":td_files"],
)

cc_library(
    name = "SimplifySubComponents",
    srcs = ["SimplifySubComponents.cpp"],
    hdrs = ["SimplifySubComponents.h"],
    deps = [
        ":TypeConversion",
        ":simplify_sub_components_inc_gen",
        "@llvm-project//llvm:Support",
        "@llvm-project//mlir:IR",
        "@llvm-project//mlir:Pass",
    ],
)

cc_library(
    name = "TypeConversion",
    srcs = ["TypeConversion.cpp"],
    hdrs = ["TypeConversion.h"],
    deps = [
        "@llvm-project//llvm:Support",
        "@llvm-project//mlir:ArithDialect",
        "@llvm-project//mlir:IR",
        "@llvm-project//mlir:TensorDialect",
        "@llvm-project//mlir:TransformUtils",
        "@prime_ir//prime_ir/Dialect/Field/IR:Field",
    ],
)

cc_library(
    name = "FeltPatterns",
    srcs = ["FeltPatterns.cpp"],
    hdrs = ["FeltPatterns.h"],
    deps = [
        ":TypeConversion",
        "@llvm-project//mlir:IR",
        "@llvm-project//mlir:TransformUtils",
        "@llzk//:LLZKHeaders",
        "@stablehlo//stablehlo/dialect:stablehlo_ops",
    ],
)

cc_library(
    name = "StructPatterns",
    srcs = ["StructPatterns.cpp"],
    hdrs = ["StructPatterns.h"],
    deps = [
        ":TypeConversion",
        "@llvm-project//mlir:IR",
        "@llvm-project//mlir:TransformUtils",
        "@stablehlo//stablehlo/dialect:stablehlo_ops",
    ],
)

cc_library(
    name = "ArrayPatterns",
    srcs = ["ArrayPatterns.cpp"],
    hdrs = ["ArrayPatterns.h"],
    deps = [
        ":TypeConversion",
        "@llvm-project//mlir:ArithDialect",
        "@llvm-project//mlir:IR",
        "@llvm-project//mlir:TensorDialect",
        "@llvm-project//mlir:TransformUtils",
        "@stablehlo//stablehlo/dialect:stablehlo_ops",
    ],
)

cc_library(
    name = "FunctionPatterns",
    srcs = ["FunctionPatterns.cpp"],
    hdrs = ["FunctionPatterns.h"],
    deps = [
        ":TypeConversion",
        "@llvm-project//mlir:FuncDialect",
        "@llvm-project//mlir:IR",
        "@llvm-project//mlir:TransformUtils",
    ],
)

cc_library(
    name = "RemovalPatterns",
    srcs = ["RemovalPatterns.cpp"],
    hdrs = ["RemovalPatterns.h"],
    deps = [
        ":TypeConversion",
        "@llvm-project//mlir:ArithDialect",
        "@llvm-project//mlir:IR",
        "@llvm-project//mlir:TensorDialect",
        "@llvm-project//mlir:TransformUtils",
        "@stablehlo//stablehlo/dialect:stablehlo_ops",
    ],
)

cc_library(
    name = "LlzkToStablehlo",
    srcs = ["LlzkToStablehlo.cpp"],
    hdrs = ["LlzkToStablehlo.h"],
    deps = [
        ":ArrayPatterns",
        ":FeltPatterns",
        ":FunctionPatterns",
        ":RemovalPatterns",
        ":StructPatterns",
        ":TypeConversion",
        ":pass_inc_gen",
        "@llvm-project//mlir:ArithDialect",
        "@llvm-project//mlir:FuncDialect",
        "@llvm-project//mlir:IR",
        "@llvm-project//mlir:Pass",
        "@llvm-project//mlir:SCFDialect",
        "@llvm-project//mlir:SCFTransforms",
        "@llvm-project//mlir:Support",
        "@llvm-project//mlir:TensorDialect",
        "@llvm-project//mlir:TransformUtils",
        "@prime_ir//prime_ir/Dialect/Field/IR:Field",
        "@stablehlo//stablehlo/dialect:stablehlo_ops",
    ],
)
