# Copyright 2026 The llzk-to-shlo Authors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
# ==============================================================================

load("@llvm-project//mlir:tblgen.bzl", "gentbl_cc_library", "td_library")
load("@rules_cc//cc:defs.bzl", "cc_library")

package(
    default_visibility = ["//visibility:public"],
)

td_library(
    name = "td_files",
    srcs = ["WitnessLayoutAnchor.td"],
    includes = ["."],
    deps = [
        "@llvm-project//mlir:PassBaseTdFiles",
    ],
)

gentbl_cc_library(
    name = "witness_layout_anchor_inc_gen",
    tbl_outs = {
        "WitnessLayoutAnchor.h.inc": [
            "-gen-pass-decls",
            "-name=WitnessLayoutAnchor",
        ],
    },
    tblgen = "@llvm-project//mlir:mlir-tblgen",
    td_file = "WitnessLayoutAnchor.td",
    deps = [":td_files"],
)

cc_library(
    name = "WitnessLayoutAnchor",
    srcs = ["WitnessLayoutAnchor.cpp"],
    hdrs = ["WitnessLayoutAnchor.h"],
    # C++20 required by llzk/Dialect/Function/IR/Ops.h transitive headers
    # (mirrors SimplifySubComponents).
    copts = ["-std=c++20"],
    deps = [
        ":witness_layout_anchor_inc_gen",
        "//llzk_to_shlo/Conversion/LlzkToStablehlo:TypeConversion",
        "//llzk_to_shlo/Dialect/WLA",
        "@llvm-project//llvm:Support",
        "@llvm-project//mlir:IR",
        "@llvm-project//mlir:Pass",
        "@llvm-project//mlir:Support",
        "@llzk//:LLZKHeaders",
    ],
)
